# livestream

./: .gitignore  CMakeLists.txt  FFmpegDecoder.cpp  FFmpegDecoder.h  FFmpegH264Encoder.cpp  FFmpegH264Encoder.h  FFmpegH264Source.cpp  FFmpegH264Source.h  LiveRTSPServer.cpp  LiveRTSPServer.h  LiveServerMediaSubsession.cpp  LiveServerMediaSubsession.h  README.md  main.cpp
live/BasicUsageEnvironment/: BasicUsageEnvironment.lib
live/UsageEnvironment/: UsageEnvironment.lib
live/groupsock/: groupsock.lib
pthread/: pthreadVC3.lib  pthreadVCE3.lib  pthreadVSE3.lib
